# Timebox

./: .env.example  .gitignore  ONBOARDING_REFERENCE.md  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json  plan.md
.github/workflows/: release.yml
docs/: DEPLOYMENT.md  DEPLOYMENT_WORKFLOW.md  DESKTOP_RELEASE.md  ENGINEERING_LEAD.md  ONBOARDING.md  PERFORMANCE_INVESTIGATION.md  PM_UIUX_FEATURE_DESIGN.md  PRIVACY_POLICY.md  PROJECT_OVERVIEW.md  PROJECT_STANDARDS.md  SUPABASE_SETUP.md  SYSTEM_INTEGRATION.md  TASK_LIST.md  TERMS_OF_SERVICE.md  UIUX_STANDARDS.md
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx  supabaseClient.ts  supabasePersistence.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tracker.rs
src/components/: ActivityPanel.tsx  AddCalendarPopover.tsx  AddModal.tsx  AdminDashboard.tsx  AuthPage.tsx  BookingPage.tsx  BugReportModal.tsx  CalendarContainerList.tsx  CalendarView.tsx  CategoryFocusList.tsx  ColorPicker.tsx  DayView.tsx  DesktopPage.tsx  DraggableBottomSheet.tsx  DueBadge.tsx  EditColorModal.tsx  EditTagModal.tsx  ErrorBoundary.tsx  EventCard.tsx  FocusPanel.tsx  GcalCallbackPage.tsx  InvitePage.tsx  LandingPage.tsx  LeftSidebar.tsx  MobileApp.tsx  MonthView.tsx  OnboardingTour.tsx  OnboardingWizard.tsx  OrganizationTree.tsx  RightSidebar.tsx  ScheduleTaskModal.tsx  SchedulingModal.tsx  SettingsPanel.tsx  SettingsSidePanel.tsx  (+9 more)
(+44 files in other folders)
