[package]
name = "timebox-desktop"
version = "0.1.3"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
active-win-pos-rs = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "timebox_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]
